criando login e logout do app

--- a/client/templates/person.html
+++ b/client/templates/person.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-
+    <a href="{%url 'logout'%}">Sair</a>
     <ul>
         {% for person in v_persons %}
             <li>
