finalizado todo o caminho do login até logout

--- a/client/templates/person.html
+++ b/client/templates/person.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <p>Olá {{user}}</p>
     <a href="{%url 'logout'%}">Sair</a>
     <ul>
         {% for person in v_persons %}
