--- a/client/templates/person.html
+++ b/client/templates/person.html
@@ -1,26 +1,22 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <p>Olá {{user}}</p>
-    <a href="{%url 'logout'%}">Sair</a>
+{% extends 'base.html'  %}
+
+{% block title %}Olá {{user}} {% endblock %}
+
+{% block body %}
+<div class="container">
+    <h3>Olá {{user}}</h3>
+    <a href="{%url 'logout'%}" class="btn btn-danger">Sair</a>
     <ul>
         {% for person in v_persons %}
-            <li>
-              <a href="{% url 'person_update' person.id %}">  {{ person.first_name }} </a>
-                &nbsp;
-              <a href="{% url 'person_delete' person.id %}">  DELETAR </a>
-            </li>
+        <li>
+            <a href="{% url 'person_update' person.id %}"> {{ person.first_name }} </a>
+            &nbsp;
+            <a href="{% url 'person_delete' person.id %}"> DELETAR </a>
+        </li>
         {%endfor%}
     </ul>
 
     <br>
-    <a href="{% url 'person_new'%}">Novo Cliente</a>
-</body>
-</html>
+    <a href="{% url 'person_new'%}" class="btn btn-success">Novo Cliente</a>
+</div>
+{% endblock %}
