--- a/client/templates/person_form.html
+++ b/client/templates/person_form.html
@@ -1,24 +1,20 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-
-    <a href="{% url 'person_list'%}">Voltar</a>
+{% extends 'base.html'  %}
+{% load bootstrap %} <!--isso é feito depois que instalei o pacote-->
+{% block title %}adicione novo cliente{% endblock %}
+<!--pip install django-bootstrap-form -->
+<!--preciso informar nos settings do meu projeto-->
+{% block body %}
+<div class="container">
+    <a href="{% url 'person_list'%}" class="btn btn-primary">Voltar</a>
     <!--a action vai apontar apelido da url que está no arquivo urls de client-->
     <!--enctype="multipart/form-data" - faz o upload dos arquivos  -->
     <!-- como o form salva e atualiza não é preciso dessa action -  action="{% url 'person_new' %}"-->
     <form method="POST" enctype="multipart/form-data">
         <!--segurança que o django prover nos formulários-->
         {% csrf_token %}
-        {{ form  }}
+        {{ form|bootstrap }}
         <button type="submit">SALVAR</button>
     </form>
-</body>
-</html>
+</div>
+{% endblock %}
 
