--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html'  %}
+
+{% block title %}Seja bem-vindo {% endblock %}
+
+{% block body %}
     <h1>Seja bem vindo</h1>
 
     <br>
@@ -14,5 +12,5 @@
     {% else %}
         <a href="{% url 'login' %}">Entrar</a>
     {% endif %}
-</body>
-</html>
+
+{% endblock %}
