--- a/client/templates/person.html
+++ b/client/templates/person.html
@@ -3,20 +3,45 @@
 {% block title %}Olá {{user}} {% endblock %}
 
 {% block body %}
-<div class="container">
-    <h3>Olá {{user}}</h3>
-    <a href="{%url 'logout'%}" class="btn btn-danger">Sair</a>
-    <ul>
-        {% for person in v_persons %}
-        <li>
-            <a href="{% url 'person_update' person.id %}"> {{ person.first_name }} </a>
-            &nbsp;
-            <a href="{% url 'person_delete' person.id %}"> DELETAR </a>
-        </li>
-        {%endfor%}
-    </ul>
+    <div class="row">
+        <div class="col">
 
-    <br>
-    <a href="{% url 'person_new'%}" class="btn btn-success">Novo Cliente</a>
-</div>
+        </div>
+        <div class="col-6">
+            <h3>Listagem de clientes</h3>
+            <ul class="list-group">
+                {% for person in v_persons %}
+                <li class="list-group-item">
+                    <a href="{% url 'person_update' person.id %}"> {{ person.first_name }} </a>
+                    &nbsp;
+                    <a href="{% url 'person_delete' person.id %}" class="trash-item">
+                        <i class="fa fa-trash" aria-hidden="true"></i>
+                    </a>
+                </li>
+                {%endfor%}
+            </ul>
+
+            <br>
+            <a href="{% url 'person_new'%}" class="btn btn-success">Novo Cliente</a>
+        </div>
+
+        <div class="col">
+            {% if user.is_authenticated %}
+            <p>Ola {{user }}
+                <a href="{%url 'logout'%}">
+                    <span class="badge badge-dark">Sair</span>
+                </a>
+            </p>
+
+            {% endif %}
+        </div>
+    </div>
+{% endblock %}
+
+{% block footer %}
+<footer class="footer">
+    <div class="container">
+        <span class="text-muted">Desenvolvimento web com Django 2.x</span>
+    </div>
+</footer>
 {% endblock %}
