--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -3,14 +3,29 @@
 {% block title %}Seja bem-vindo {% endblock %}
 
 {% block body %}
-    <h1>Seja bem vindo</h1>
+<div class="row">
+    <div class="col">
 
-    <br>
-    {% if user.is_authenticated %}
+    </div>
+
+    <div class="col-6">
+        <h1>Seja bem vindo</h1>
+    </div>
+
+    <div class="col-sm">
+        {% if user.is_authenticated %}
         <p>Olá {{ user.username }}</p>
-        <a href="{% url 'logout'%}" >Sair</a>
-    {% else %}
-        <a href="{% url 'login' %}">Entrar</a>
-    {% endif %}
+        <a href="{% url 'logout'%}">Sair</a>
+        {% else %}
+        <a href="{% url 'login' %}" class="btn btn-info">Entrar</a>
+        {% endif %}
+    </div>
+    {% endblock %}
 
-{% endblock %}
+    {% block footer %}
+    <footer class="footer">
+        <div class="container">
+            <span class="text-muted">Desenvolvimento web com Django 2.x</span>
+        </div>
+    </footer>
+    {% endblock %}
