--- a/client/templates/person_delete_confirm.html
+++ b/client/templates/person_delete_confirm.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html'  %}
+
+{% block title %}Olá {{user}} {% endblock %}
+
+{% block body %}
     <a href="{% url 'person_list'%}">voltar</a>
     <br>
     <h1>Tem certeza que deseja deletar a pessoa abaixo?</h1>
@@ -17,5 +12,9 @@
         <button type="submit">deletar</button>
     </form>
 
-</body>
-</html>
+
+{% endblock %}
+
+{% block footer %}
+    {% include 'footer.html' %}
+{% endblock %}
