--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'  %}
-{% load bootstrap %}
+{#{% load bootstrap %}#}
 {% block title %}Faça o login{% endblock %}
 
 {% block body %}
