Feito todas as querys para o dashboard

--- a/vendas/templates/vendas/dashboard.html
+++ b/vendas/templates/vendas/dashboard.html
@@ -7,5 +7,11 @@
     <ul>
 
         <li>Ticket médio:  {{ media }}</li>
+        <li>Media desconto por cabeçalho:  {{ media_desc_cabecalho }}</li>
+        <li>Media desconto por produto: {{ media_desc_por_produto }}</li>
+        <li>Media desconto geral: {{ desconto_total }}</li>
+        <li>nfe impressa: {{ nfe_impressa }}/{{ qtd_vendas }}</li>
+        <li>Ped. menor valor: {{ venda_min }}</li>
+        <li>Ped. maior valor: {{ venda_max }}</li>
     </ul>
 {% endblock %}
