--- a/client/templates/person.html
+++ b/client/templates/person.html
@@ -34,6 +34,9 @@
     <div class="col">
         {% if user.is_authenticated %}
         <p>Ola {{user }}
+            <a href="{%url 'tela_home'%}">
+                <span class="badge badge-dark">HOME</span>
+            </a>
             <a href="{%url 'logout'%}">
                 <span class="badge badge-dark">Sair</span>
             </a>
