personalizando as autorizações e permissões das apps

--- a/client/templates/client/person_detail.html
+++ b/client/templates/client/person_detail.html
@@ -2,6 +2,7 @@
 
 <!--para pegar o objeto details se utiliza object-->
 {% block body %}
+    <p><a href="{% url 'person_list_cbv' %}">VOLTA</a></p>
     {{object}}
 
     <p>data atual: {{now}}</p>
